fix outcome overflow in firefox/IE8. fixes #11518
long lists of outcomes (20+) were being clipped by the
horizontal scroll bars in IE8 and firefox. this commit
solves the problem by adding padding to the outcome list
container and removing it from the individual lists.

test plan:
  * in firefox or IE8, create 20+ outcomes in a single group
    and verify that they are all visible and that no clipping
    occurs at the bottom of the list;
  * in chrome/safari, verify that the list continues to look
    as expected and that there aren't any overflow regressions.

Reviewed-on: https://gerrit.instructure.com/14819
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/stylesheets/learning_outcomes.sass
+++ b/app/stylesheets/learning_outcomes.sass
@@ -24,11 +24,12 @@ input.outcome_rating_description
       clear: both
   .outcomes-sidebar
     float: left
-    height: 500px
+    height: 485px
     width: 201px
     background-color: $lightBackground
     overflow-x: scroll
     overflow-y: hidden
+    padding-bottom: 15px
     .wrapper
       width: 201px
   .outcomes-content
@@ -97,8 +98,7 @@ ul.outcome-level
   margin: 0
   border-right: 1px solid #ccc
   float: left
-  padding-bottom: 50px
-  height: 450px
+  height: 485px
   width: 200px
   overflow-x: hidden
   overflow-y: scroll
